# MusicDNA

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  AUDYT_ENGINES.txt  AUDYT_PROJEKTU.txt  HMI_MANIFEST.md  LUMIR_CORE.md  LUMIR_OS.md  MIND_OS.md  MONEY_ENGINE.md  NEXT_ACTION.md  PRIORITY.md  README.md  ROADMAP.md  START_MUSICDNA.bat  START_MUSICDNA.pyw  TASK-001.md  TASK-003_USAGE.md  TASK-004_USAGE.md  TASK-005_USAGE.md  TASK_TEMPLATE.md  TOOLS.md  VISION.md  analyze_all.py  function_coverage.json  generate_prompt.py  knowledge.json  knowledge_graph.json  main.py  music_dna_prompt.txt  music_genome.json  music_worker.py  musicdna.py  musicdna_launcher.py  psychological_functions.json  pyproject.toml  registry.json  requirements.txt  schema_v1.json
brain/: advisor_engine.py  bpm_reasoning.py  comparison_engine.py  evidence_engine.py  explain_engine.py  intelligence.py  master_brain.py  pipeline.py  pipeline_v2.py  reasoning_engine.py  registry.py  research_pipeline.py  scan_all.py  scanner.py
collectors/: youtube_collector.py
core/: audio_core.py  ffmpeg_engine.py  file_loader.py  ingestion.py  launcher_service.py  paths.py  publication.py  report_workspace.py  runtime.py  subprocesses.py
discovery/: discovery_engine.py
engines/: arrangement_engine.py  beat_strength.py  bpm_engine.py  bpm_engine_v2.py  brain_engine.py  brightness_engine.py  brightness_timeline.py  cause_effect_engine.py  centroid_engine.py  composer_engine.py  condition_engine.py  correlation_engine.py  counter_evidence_engine.py  cross_song_engine.py  decision_engine.py  delta_spectrum_engine.py  (+90 more)
(+17 files in other folders)
