[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musicdna"
version = "0.1.0"
description = "MusicDNA analysis command-line tools"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "jsonschema>=4.22,<5",
  "yt-dlp>=2025.1.1",
]

[project.scripts]
musicdna = "musicdna:main"

[project.gui-scripts]
musicdna-launcher = "musicdna_launcher:main"

[tool.setuptools]
py-modules = ["musicdna", "musicdna_launcher"]

[tool.setuptools.packages.find]
include = ["brain*", "collectors*", "core*", "database*", "discovery*", "engines*", "schema*"]
